2006-01-08  07.09 Paul Mangan <claws@thewildbeast.co.uk>

	* po/de.po: translation submitted by Stephan Sachse <white@dev-zero.com>

2006-01-03  19:20 Colin Leroy <colin@colino.net>

	* src/feed.c
	* src/feed.h
	* src/rssyl.c
		Use If-Modified-Since feature to avoid fetching the feed when
		it's not been updated

2006-01-01  09.50 Paul Mangan <claws@thewildbeast.co.uk>

	* po/fi.po: translation submitted by Flammie Pirinen <flammie@iki.fi>

2005-12-28 22:56  <colin@colino.net>
	* src/feed.c: Do not take date into account when comparing
	  feed items with no date.
	* src/rssyl_gtk.c: Put back the NULL in rssyl_popup_menu_labels

2005-12-27 19:56  Andrej Kacian <andrej@kacian.sk>
	* src/rssyl_gtk.c: Upon plugin unload, close opened folder if it's our
		folder, so s-c doesn't crash when clicking on leftover items.

2005-12-27 19:22  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c: Take date into account when comparing feed items.
	* configure.ac: Require s-c >=1.9.100.0

2005-12-20 19:59  Colin Leroy <colin@colino.net>
	* src/rssyl_gtk.c: Fix a potential crasher

2005-12-18 17:15  Andrej Kacian <andrej@kacian.sk>
	* src/plugin.c: Add bind_textdomain_codeset(), so non-unicode locales work.

2005-12-17 19:08  Andrej Kacian <andrej@kacian.sk>
	* src: Updated some UI strings, changed code a bit, so the popup menu labels
		can take advantage of the translation.

2005-12-17 00:34  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c, src/feed.h: Do not allow subscribing to a feed more than once.

2005-12-15 22:01  Andrej Kacian <andrej@kacian.sk>
	* src, po, configure.ac, Makefile.am: Added gettext support

2005-12-15 11:35  Paul Mangan <claws@thewildbeast.co.uk>
	* src, configure.ac: add plugin_version()

2005-12-13 21:59  Andrej Kacian <andrej@kacian.sk>
	* src: More leak fixes by Colin.
	* configure.ac: Add more header checks. Patch by Paul Mangan.

2005-12-12 14:29  Andrej Kacian <andrej@kacian.sk>
	* src: Fix many memory leaks. Thanks to Colin for the patch.
