@@ -6,8 +6,8 @@
 
 #include "feed.h"
 
-gint rssyl_parse_rss(xmlDocPtr doc, RSSylFolderItem *ritem);
-gint rssyl_parse_rdf(xmlDocPtr doc, RSSylFolderItem *ritem);
-gint rssyl_parse_atom(xmlDocPtr doc, RSSylFolderItem *ritem);
+gint rssyl_parse_rss(xmlDocPtr doc, RSSylFolderItem *ritem, gchar *parent);
+gint rssyl_parse_rdf(xmlDocPtr doc, RSSylFolderItem *ritem, gchar *parent);
+gint rssyl_parse_atom(xmlDocPtr doc, RSSylFolderItem *ritem, gchar *parent);
 
 #endif /* __PARSERS_H */
